--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
             <ImageView
                 android:scaleType="centerCrop"
-                android:background="@drawable/two"
+                android:background="@drawable/one"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 </LinearLayout>
